projects/cyberpeaks.nl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyberpeaks-nl-app
  namespace: prd
  labels:
    app: cyberpeaks-nl-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cyberpeaks-nl-app
  template:
    metadata:
      labels:
        app: cyberpeaks-nl-app
    spec:
      containers:
      - name: cyberpeaks-nl-app
        image: teunzengerink/cyberpeaks.nl:main
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /api/healthz
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 2
